--- a/planify/public/index.html
+++ b/planify/public/index.html
@@ -10,18 +10,15 @@
     <title>Planify</title>
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-    />
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
       integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-      crossorigin=""
-    />
+      crossorigin />
     <link
       href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-      rel="stylesheet"
-    />
+      rel="stylesheet" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     <!-- Nepcha Analytics (nepcha.com) -->
@@ -29,8 +26,8 @@
     <script
       defer
       data-site="YOUR_DOMAIN_HERE"
-      src="https://api.nepcha.com/js/nepcha-analytics.js"
-    ></script>
+      src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script src="http://localhost:8097"></script>
   </head>
 
   <body>
